src/snapshots/afrotd__parser__tests__rule_3.4.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 3
title: Unfaire Zeittaktiken
text: "Der Referee hat weitreichende Befugnisse in Bezug auf die Zeitnahme eines Spieles.\n\ta) Der Referee soll anordnen, dass die Game Clock oder die Play Clock angehalten oder gestartet wird, wenn ein Team versucht, durch offensichtlich unfaires Verhalten Zeitvorteile zu erlangen. Das beinhaltet das Starten der Game Clock beim Snap, wenn das Foul durch das Team verursacht wurde, das nach Punkten in Führung liegt. Als eine Richtlinie soll der Referee diese Regel anwenden, wenn die Game Clock weniger als fünf Minuten in einer Halbzeit anzeigt.\n\tb) Wird die Game Clock nach dem Zwei-Minuten-Timeout in der zweiten oder vierten Spielperiode angehalten, um eine Strafe für ein Foul zu vervollständigen, welches das in Führung liegende Team (oder eines der Teams, wenn der Punktestand unentschieden ist) begangen hat und die Game Clock gemäß den Regeln mit der Ballfreigabe durch den Referee starten würde, startet die Game Clock, je nach Wahl des gefoulten Teams, mit dem Snap. Die Game Clock startet bei der Ballfreigabe, nachdem Team A einen illegalen Vorwärts- oder Rückpass geworfen hat, um Zeit einzusparen (Regel 3.3.2.e.14) (A.R. 3.4.3.I bis 3.4.3.V)."
interpretations: []
