src/snapshots/afrotd__parser__tests__rule_3.4.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 4
  - 5
title: 10-Sekunden-Abzug von der Game Clock - Zusammenfassung
text: "Die folgende Zusammenfassung soll verdeutlichen, wann ein 10-SekundenAbzug von der Game Clock in Frage kommt:\n\ta) Verletzungs-Timeout (Regel 3.3.6.f)\n\tb) Helmverlust-Timeout (Regel 3.3.10.b)\n\tc) Foul (Regel 3.4.4)"
interpretations: []
