src/snapshots/afrotd__parser__tests__rule_3.5.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 2
title: Legale Auswechselung
text: "Ein legaler Ersatzspieler darf einen Spieler ersetzen oder den Platz eines fehlenden Spielers auf dem Feld einnehmen, vorausgesetzt, dass keine der folgenden Auflagen verletzt worden ist.\n\ta) Ein einwechselnder Ersatzspieler darf das Spielfeld oder eine Endzone nicht betreten, während der Ball im Spiel ist.\n\tb) Im Fall von mehr als elf Spielern bei einem Team darf kein Spieler das Spielfeld oder eine Endzone verlassen, während der Ball im Spiel ist (A.R. 3.5.2.I). Strafe (a-b): Live Ball Foul. 5 Meter vom Previous Spot [S22]. \n\tc) \n\t\t1. Ein legaler Ersatzspieler, der das Spielfeld betreten will, muss es direkt von seiner Teamzone kommend betreten und ein Ersatzspieler, Spieler oder ausgewechselter Spieler, der das Spielfeld verlässt, muss es an der Seitenlinie, an der sich seine Teamzone befindet, verlassen und sich in Richtung seiner Teamzone begeben.\n\t\t2. Ein ausgewechselter Spieler muss das Spielfeld einschließlich der Endzonen sofort verlassen. Das Verlassen des Huddles oder seiner Position durch einen ausgewechselten Spieler innerhalb von drei Sekunden, nachdem ein Ersatzspieler zum Spieler wurde, gilt als sofortiges Verlassen.\n\td) Ersatzspieler, die zu Spielern werden (Regel 2.27.9), müssen wenigstens für einen Down im Spiel und ersetzte Spieler müssen wenigstens für einen Down aus dem Spiel bleiben. Dies gilt nicht bei einer Unterbrechung zwischen den Perioden, nach einem Punktgewinn oder wenn ein Timeout einem Team oder dem Referee, mit Ausnahme eines Live Ball im Aus oder eines unvollständigen Vorwärtspasses, angerechnet wird (A.R. 3.5.2.III und 3.5.2.VI). Strafe (c-d): Dead Ball Foul. 5 Meter vom Succeeding Spot [S22].\n\te) Wenn Team A seine Ersatzspieler einwechselt, dürfen die Schiedsrichter den Snap nicht eher erlauben, bis Team B die Möglichkeit hatte, seinerseits Auswechselungen vorzunehmen. Während einer Auswechselung oder einer vorgetäuschten Auswechselung darf Team A im offensichtlichen Versuch, die Defense zu benachteiligen, sich nicht schnell zur Scrimmage Line begeben. Wenn der Ball für spielbereit erklärt wurde, dürfen die Schiedsrichter das Snappen des Balles nicht zulassen, bis die Ersatzspieler von Team B ihre Position eingenommen haben und ausgewechselte Spieler das Spielfeld verlassen haben. Team B muss mit seinen Ersatzspielern sofort reagieren. Strafe: (Erster Verstoß) Dead Ball Foul. Spielverzögerung von Team B für nicht sofortiges Ausführen der Auswechselung(en), oder Spielverzögerung von Team A, wenn Team A den Countdown der Play Clock auslaufen lässt. 5 Meter vom Succeeding Spot [S21]. Der Referee informiert dann den Head Coach, dass jede weitere Anwendung dieser Taktik in einem unsportlichen Verhalten Foul resultiert. Strafe: (Zweiter und jeder weitere Verstoß) Dead Ball Foul, unsportliches Verhalten des Teams. Ein Schiedsrichter pfeift sofort ab. 15 Meter vom Succeeding Spot [S27]."
interpretations: []
