src/snapshots/afrotd__parser__tests__rule_3.5.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 3
  - 5
  - 3
title: Mehr als 11 Spieler auf dem Feld und außereuropäische Spieler
text: "\ta) Team A darf weder sein Huddle mit mehr als 11 Spielern auflösen noch mehr als 11 Spieler für mehr als 3 Sekunden in seinem Huddle oder in einer Formation belassen. Die Schiedsrichter müssen die Aktion stoppen, egal ob der Snap unmittelbar bevorsteht oder gerade durchgeführt wurde. Strafe: Dead Ball Foul. 5 Meter vom Succeeding Spot [S22].\n\tb) Team B ist es erlaubt, kurzfristig mehr als 11 Spieler auf dem Feld zu lassen, um die Offense Formation zu ermitteln, aber sie dürfen nicht mehr als 11 Spieler auf dem Feld haben, wenn der Snap durchgeführt wird. Der Regelverstoß wird als Live Ball Foul geahndet (A.R. 3.5.3.I bis 3.5.3.VII). Strafe: Live Ball Foul. 5 Meter vom Previous Spot [S22]. Wenn die Defense nach dem Zwei-Minuten-Timeout in einer Halbzeit einen Auswechselfehler begeht und 12 oder mehr Spieler auf dem Feld sind und an dem Down teilnehmen, bestrafen die Schiedsrichter die Defense für das Foul und die Game Clock wird, nach Wahl des gefoulten Teams, auf die Zeit zurückgesetzt, die beim Snap auf der Game Clock angezeigt war. Die Game Clock startet dann mit dem nächsten Snap. Wenn der überzählige Defense-Spieler versucht, das Feld zu verlassen, aber beim Snap noch auf dem Feld ist und keinen Einfluss auf das Play genommen hat, wird die normale Strafe für den Auswechselfehler durchgeführt, ohne dass die Game Clock korrigiert wird (A.R. 3.5.3.VIII bis 3.5.3.X)\n\tc) Die Teilnahme von mehr als zwei außereuropäischen Spielern während eines Downs wird analog zu Regel 3.5.3.a und 3.5.3.b geregelt (siehe auch BSO Deutschland). Regel 4 Live Ball, Dead Ball, im Aus"
interpretations: []
