src/snapshots/afrotd__parser__tests__rule_4.1.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 2
title: Live Ball wird zum Dead Ball
text: "\ta) Ein Live Ball wird gemäß den Regeln zum Dead Ball oder wenn ein Schiedsrichter abpfeift (auch durch ein irrtümliches Abpfeifen) oder den Ball durch ein Schiedsrichtersignal für dead erklärt (A.R. 4.2.1.II, A.R. 4.2.4.I).\n\tb) Wenn ein Schiedsrichter während eines Downs irrtümlich abpfeift oder den Ball durch ein Schiedsrichtersignal für dead erklärt (Regeln 4.1.3.n, 4.1.3.m und 4.1.3.k) (A.R. 4.1.2.I bis 4.1.2.V):\n\t\t1. Wenn der Ball sich im Besitz eines Spielers befindet, kann das Team in Ballbesitz wählen, den Ball an der Stelle ins Spiel zu bringen, wo er für dead erklärt wurde oder den Down vom Previous Spot zu wiederholen.\n\t\t2. Wenn der Ball durch einen Fumble, Rückpass oder illegalen Pass frei ist, kann das Team in Ballbesitz wählen, den Ball an der Stelle ins Spiel zu bringen, wo der Ballbesitz verloren ging oder den Down zu wiederholen. Ausnahmen:\n\t\t\ta. Falls der freie Ball in der unmittelbar folgenden Aktion nach einem irrtümlichen Abpfeifen ins Aus geht, gehört der Ballbesitz dem fumbelnden / passenden Team gemäß Regel 7.2.4.\n\t\t\tb. Falls der freie Ball in der unmittelbar folgenden Aktion nach einem irrtümlichen Abpfeifen klar sichtbar gefangen, recovert oder abgefangen wird, gehört der Ballbesitz diesem Team am Punkt der Recovery. Jeglicher anschließende Raumgewinn nach der Recovery ist nichtig.\n\t\t3. Während eines legalen Vorwärtspasses oder eines Free- oder Scrimmage Kicks wird der Ball zum Previous Spot zurückgebracht und der Down wird wiederholt. Ausnahmen:\n\t\t\ta. Falls, in der unmittelbar folgenden Aktion nach einem irrtümlichen Abpfeifen, ein legaler Vorwärtspass unvollständig ist (Regel 7.3.7), ein Free Kick ins Aus geht (Regel 6.2 ) oder den Boden auf oder jenseits von Team B’s Goalline (Regel 6.1.7) berührt, ein Scrimmage Kick ins Aus geht (Regel 6.3.7 oder 6.3.8 ) oder den Boden auf oder jenseits von Team B’s Goalline berührt, dann gelten diese Regeln so als hätte das irrtümliche Abpfeifen nicht stattgefunden.\n\t\t\tb. Falls es ein klar sichtbares Fangen, Recovern oder Abfangen einen Passes oder Kicks in der sofort folgenden Aktion nach einem irrtümlichen Abpfeifen gibt, dann gehört der Ballbesitz dem Team am Punkt, wo es Ballbesitz erlangt hat. Jeglicher Raumgewinn nachdem Ballbesitz erlangt wurde, ist nichtig.\n\t\t\tc. Überquert ein Scrimmage Kick die neutrale Zone und ist unberührt von Team B jenseits der neutralen Zone und falls die Ausnahmen 4.1.2.b.3.a und 4.1.2.b.3.b nicht zutreffen und der Punkt, an dem der Kick endet bekannt ist (Regel 2.25.9), ist der Ball dead und gehört zu Team B am Punkt, wo der Kick endete. Damit können Regeln bezüglich Post Scrimmage Kick Enforcement unter Berücksichtigung der Voraussetzungen der Regel 10.2.3, angewandt werden. Bei einem Fieldgoalversuch werden Punkte erzielt, sofern die Anforderungen gemäß Regel 8.4.1 erfüllt sind. (A.R. 4.1.2.I)\n\t\t4. Nachdem Team B während des Try oder einer Extraperiode Ballbesitz erlangt, ist der Try vorüber oder die betreffende Ballbesitzserie einer Extraperiode beendet.\n\tc) Ereignen sich während eines der oben aufgeführten Downs Fouls oder Violations, wird die Strafe oder das Violation-Privileg wie in anderen Spielsituationen durchgeführt, soweit keine Widersprüche zu anderen Regeln bestehen (A.R. 4.1.2.I und 4.1.2.II)."
interpretations: []
