src/snapshots/afrotd__parser__tests__rule_4.1.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 3
title: Ball wird für dead erklärt
text: "Ein Live Ball wird dead und ein Schiedsrichter soll abpfeifen oder den Ball für dead erklären, wenn:\n\ta) der Ball ins Aus geht, außer es handelt sich um einen Kick, bei dem ein Fieldgoal erzielt wird, nachdem der Kick die Querlatte oder die Pfosten berührt hat; ein Ballträger im Aus ist oder ein Ballträger so festgehalten wird, dass sein Forward Progress gestoppt wurde. Im Zweifel ist der Ball dead (A.R. 4.2.1.II).\n\tb) irgendein Körperteil des Ballträgers, außer seinen Händen oder Füßen, den Boden berührt oder ein Ballträger getackelt wird oder irgendwie fällt und den Ball verliert, wenn er den Boden mit einem anderen Körperteil als Hände oder Füße berührt (Ausnahme: Der Ball bleibt ein Live Ball, wenn ein Offense Spieler einen Kick vorgetäuscht hat oder beim Snap in der Position ist, einen Ball zu kicken, der von einem Mitspieler für einen Place Kick gehalten wird. Der Ball kann regelgerecht gekickt, geworfen, getragen oder übergeben werden (A.R. 4.1.3.I)).\n\tc) ein Touchdown, Touchback, Safety, Fieldgoal oder ein erfolgreicher Try erzielt wurde oder ein Free Kick oder ein Scrimmage Kick, der jenseits der neutralen Zone unberührt von Team B ist, den Boden in Team B’s Endzone berührt (Regeln 6.1.7.a, 6.3.9 und A.R. 6.3.9.I).\n\td) während eines Try eine Dead Ball Regel zutrifft (Regel 8.3.2.d.5).\n\te) ein Spieler des Kicking Teams einen Free Kick oder einen Scrimmage Kick, der die neutrale Zone überquert hat, fängt oder recovert.\n\tf) ein Free- oder Scrimmage Kick oder irgendein anderer freier Ball zur Ruhe kommt und kein Spieler versucht, den Ball zu recovern.\n\tg) ein Free Kick oder ein Scrimmage Kick von irgendeinem Team B-Spieler gefangen oder recovert wird, nachdem irgendein Team B-Spieler ein gültiges oder ungültiges Fair Catch-Signal gegeben hat oder ein ungültiges Fair Catch-Signal gemacht wird, nachdem Team B einen Kick gefangen oder recovert hat (Regeln 2.8.1 bis 2.8.3).\n\th) ein Return Kick oder ein Scrimmage Kick jenseits der neutralen Zone durchgeführt wird.\n\ti) ein Vorwärtspass für unvollständig erklärt wird.\n\tj) vor dem Wechsel des Team Ballbesitzes beim vierten Down oder beim Try ein Team A-Fumble von einem anderen Team A-Spieler als dem Fumbler gefangen oder recovert wird (Regel 7.2.2.a und 7.2.2.b und 8.3.2.d.5).\n\tk) ein Live Ball, der nicht im Besitz eines Spielers ist, im Feld irgendetwas, außer einen Spieler, die Ausrüstung eines Spielers, einen Schiedsrichter, ein Ausrüstungsteil eines Schiedsrichters oder den Boden berührt (die Regeln bezüglich irrtümlichen Abpfeifens treffen analog zu).\n\tl) ein Live Ball gleichzeitig von gegnerischen Spielern gefangen oder recovert wird.\n\tm) der Ball während des Spieles illegal wird (die Regeln bezüglich irrtümlichen Abpfeifens treffen analog zu).\n\tn) sich ein Live Ball im Besitz eines Schiedsrichters befindet (die Regeln bezüglich irrtümlichen Abpfeifens treffen analog zu).\n\to) ein Ballträger vortäuscht, er würde abknien.\n\tp) ein in der Luft befindlicher Passreceiver eines Teams so festgehalten wird, dass er daran gehindert wird, sofort auf den Boden zurückzukehren (A.R. 7.3.6.III).\n\tq) der Ballträger seinen Helm vollständig verliert.\n\tr) ein Ballträger offensichtlich beginnt, mit einem oder beiden Füßen voran zu rutschen. Wenn ein Ballträger vortäuscht, er würde mit seinen Füßen voran rutschen, soll der Ball an dem Punkt von den Schiedsrichtern für dead erklärt werden, an dem der Ballträger mit dem Versuch beginnt (A.R. 4.1.3.III und 4.1.3.IV)."
interpretations: []
