src/snapshots/afrotd__parser__tests__rule_4.1.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 4
title: Ballfreigabe
text: "Kein Spieler darf den Ball ins Spiel bringen, bevor dieser für spielbereit erklärt wird (A.R. 4.1.4.I und 4.1.4.II). Strafe: Dead Ball Foul, 5 Meter vom Succeeding Spot [S19]."
interpretations: []
