src/snapshots/afrotd__parser__tests__rule_4.1.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 4
  - 1
  - 5
title: Play Clock-Countdown
text: "Der Ball muss innerhalb von 40 oder 25 Sekunden, nachdem er spielbereit ist (Regel 3.2.4), ins Spiel gebracht werden, es sei denn, das Spiel musste während des Play Clock-Countdowns unterbrochen werden. Wurde das Spiel unterbrochen, muss der Play Clock-Countdown neu gestartet werden. Strafe: Dead Ball Foul für Spielverzögerung, 5 Meter vom Succeeding Spot [S7 und S21]."
interpretations: []
